--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "axios": "^0.18",
+        "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
-        "laravel-mix": "^2.0",
+        "jquery": "^3.2",
+        "laravel-mix": "^4.0.7",
+        "lodash": "^4.17.5",
+        "popper.js": "^1.12",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.15.2",
+        "sass-loader": "^7.1.0",
         "vue": "^2.5.17"
-    },
-    "dependencies": {
-        "exports-loader": "^0.7.0",
-        "imports-loader": "^0.8.0",
-        "videojs": "^1.0.0",
-        "videojs-contrib-hls": "^5.14.1",
-        "videojs-ima": "^1.5.1",
-        "vue-video-player": "^5.0.2"
     }
 }
