--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
 /node_modules
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
-.env
-.phpunit.result.cache
-Homestead.json
-Homestead.yaml
+/fonts
 npm-debug.log
 yarn-error.log
+mix-manifest.json
