--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    if: ! contains(toJSON(github.event.commits.*.message), '[skip ci]')
+    if: "!contains(toJSON(github.event.commits.*.message), '[skip ci]')"
 
     steps:
       - name: Checkout repository
